# gii-4

./: .gitmodules  robotics.txt  session.mk
compilers/: .ycm_extra_conf.py  AST.cc  AST.h  ASTDumper.h  CMakeLists.txt  EvaluatorTest.cc  Makefile  Optional.h  Parser.cc  Parser.h  Tokenizer.cc  Tokenizer.h  TokenizerTest.cc  Value.cc  Value.h
compilers/src/: AST.cc  ASTNodeTypes.h  Parser.h  Tokenizer.cc  Tokenizer.h  Value.h
compilers/tests/: EvaluatorTest.cc
computer-graphics-info/: meeting-2.md
computer-security/p1-ciphers/: .gitignore  ciphers.md  cyphers.md  part-a.sh  part-a1.sh
computer-security/p2-mail/: signatures.md
computer-security/p3-secure-web-server/: web-server.md
computer-security/p4-signatures/: .gitignore  signatures.md  statement.md
computer-security/p5-vulns/: .gitignore  vulns.md
computer-security/p6-os-access/: os-access.md  unshadowed.txt
computer-security/p7-sysctl/: sysctl.md
computer-security/p8-wireshark/: crisal.io-chrome-analyzed.pcapng  crisal.io-firefox-filtered.pcapng  wireshark.md
distributed-systems/race/: build.gradle
image-processing/: rendering-algorithms.md
infosec/: .gitignore  common.py  extract-relevant.py  frequency-analysis.py  numbers.py
intelligent-systems/gensym-g2/: p3-baselineal.kb  p3-metaconocimiento.kb  p3.rs
intelligent-systems/lisp-stuff/: README.md  unification.lsp
intelligent-systems/prolog-search-systems/: .gitignore  Makefile  README.md
intelligent-systems/prolog-search-systems/part-2/: Cargo.toml
intelligent-systems/search-algorithms/: Cargo.toml  map.prolog  map2.prolog
law/: Makefile  proteccion-bbdd.md
project-management/: .gitignore  Makefile  organizational-structure.tex
project-management/old/: briefing.tex
project-management/p1/: Makefile  informe.md  p1.ezp  test.ezd  test.ezp
project-management/p2/: informe.md  project.mpp
robotics/assignment-1/: CMakeLists.txt  Makefile
robotics/assignment-1/src/: Assignment1.cpp
robotics/theory-1/: Makefile  slides.md
robotics/theory-2/: Makefile  slides.md
(+9 files in other folders)
